# ticketing

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
ticketing/: db_manager.py  listener.py  models.py  plugin.py  services.py
ticketing/migrations/: env.py
ticketing/migrations/versions/: d759c6d30f5a_placeholder_migration.py
